--- a/templates/prometheus/alertmanager.conf
+++ b/templates/prometheus/alertmanager.conf
@@ -4,6 +4,9 @@ global:
   smtp_from: '{{monitoring_from}}'
   smtp_auth_username: '{{smtp_auth_username}}'
   smtp_auth_password: '{{smtp_auth_username}}'
+{% if use_slack_notifications | default(false) %}
+  slack_api_url: '{{slack_api_url}}'
+{% endif %}
 
 # The root route on which each incoming alert enters.
 route:
@@ -44,9 +47,13 @@ inhibit_rules:
   # Apply inhibition if the alertname is the same.
   equal: ['alertname']
 
-
 receivers:
 - name: 'team-mails'
   email_configs:
   - to: '{{monitoring_recipient}}'
     send_resolved: true
+{% if use_slack_notifications | default(false) %}
+  slack_configs:
+  - channel: '{{slack_channel}}'
+    send_resolved: true
+{% endif %}
