--- a/templates/prometheus/infra-prometheus-rules.conf
+++ b/templates/prometheus/infra-prometheus-rules.conf
@@ -19,7 +19,7 @@
     description: "{{ $$labels.name }} has been unhealthy for: more than 10 minutes."
 
 - alert: DiskWillFillInOneDay
-  expr: predict_linear(node_filesystem_free{mountpoint='/rootfs'}[1h], 24*3600) < 0
+  expr: predict_linear(node_filesystem_free{mountpoint=~'/rootfs/.*'}[1h], 24*3600) < 0
   for: 1h
   labels:
     severity: "major"
@@ -28,7 +28,7 @@
     description: "{{ $$labels.name }} : {{ $$labels.mountpoint }} will be filled within 1 day."
 
 - alert: DiskWillFillIn4Hours
-  expr: predict_linear(node_filesystem_free{mountpoint='/rootfs'}[1h], 4*3600) < 0
+  expr: predict_linear(node_filesystem_free{mountpoint=~'/rootfs/.*'}[1h], 4*3600) < 0
   for: 5m
   labels:
     severity: "critical"
