--- a/templates/prometheus/rancher-compose.yml
+++ b/templates/prometheus/rancher-compose.yml
@@ -18,6 +18,7 @@ services:
       request_line: ''
       healthy_threshold: 2
       response_timeout: 5000
+      strategy: none
     metadata:
       prometheus-config: |
         alerting:
@@ -61,7 +62,7 @@ services:
             type: A
             port: 8080
 
-        - job_name: 'Prometheus'
+        - job_name: 'prometheus'
           static_configs:
             - targets:
               - '127.0.0.1:9090'
@@ -82,6 +83,7 @@ services:
       request_line: ''
       healthy_threshold: 2
       response_timeout: 5000
+      strategy: none
 
   grafana-setup:
     metadata:
@@ -102,7 +104,18 @@ services:
           {
             "name": "{{dashboardFile  | basename | splitext | first}}",
             "value":
-{{ lookup('file', dashboardFile) | indent(12, True) }}
+{{ lookup('file', dashboardFile) | indent(12, True) | replace("NAME_PROJECT", normalized_project_name) }}
+          }{% if not loop.last %},{% endif %}
+{% endfor %}
+
+        ]
+      notifications: |
+        [
+{% for notificationFile in prometheus_grafana_notifications %}
+          {
+            "name": "slack",
+            "value":
+{{ lookup('template', notificationFile) | indent(12, True) }}
           }{% if not loop.last %},{% endif %}
 {% endfor %}
 
