--- a/install_skalogs.yml
+++ b/install_skalogs.yml
@@ -1,5 +1,5 @@
 ---
-#./ansible-playbook_wrapper create_collect_data.yml -K -e "NAME_PROJECT=myproject"
+#./ansible-playbook_wrapper install_skalogs.yml -K -e "NAME_PROJECT=myproject"
 - hosts: "{{ NAME_PROJECT}}[0]"
   gather_facts: no
   roles:
@@ -22,6 +22,8 @@
   - {role: AdopteUnOps.rancher-install-stack, stack_name: elasticsearch, tags: [install-stack, elasticsearch]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: zookeeper, tags: [install-stack, zookeeper]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: kafka, tags: [install-stack, kafka]}
-  - {role: AdopteUnOps.rancher-install-stack, stack_name: importer, tags: [install-stack, process]}
+  - {role: AdopteUnOps.rancher-install-stack, stack_name: postgres, tags: [install-stack, postgres]}
+  - {role: AdopteUnOps.rancher-install-stack, stack_name: etl, tags: [install-stack, etl]}
+  - {role: AdopteUnOps.rancher-install-stack, stack_name: importer, tags: [install-stack, importer]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: kibana, tags: [install-stack, kibana]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: endpoints, tags: [install-stack, endpoints]}
