--- a/templates/elasticsearch/docker-compose.yml
+++ b/templates/elasticsearch/docker-compose.yml
@@ -169,6 +169,7 @@ services:
         ELASTICSEARCH_USERNAME: {{ elasticsearch_svcadmin_username }}
         ELASTICSEARCH_PASSWORD: {{ elasticsearch_svcadmin_password }}
         ELASTICSEARCH_CLUSTER: {{ elasticsearch_cluster_name }}
+        ELASTICSEARCH_PORT: 9300
       labels:
         com.prometheus.monitoring: true
         com.prometheus.port: 7979
