--- a/templates/importer/docker-compose.yml
+++ b/templates/importer/docker-compose.yml
@@ -1,72 +1,123 @@
 version: '2'
 services:
   process-importer:
+    image: skalogs/process-importer:{{etl_version}}
     environment:
+      ELASTICSEARCH_CLUSTERNAME: skalogs-demo
+      ELASTICSEARCH_CUSTOM_INDEX_PREFIX: skalogs-demo
       ELASTICSEARCH_HOST: elasticsearch
-      ELASTICSEARCH_PORT: 9200
-      ELASTICSEARCH_CLUSTERNAME: "{{ elasticsearch_cluster_name }}"
-      SERVICE_ELASTICSEARCH_USERNAME: "{{elasticsearch_svckibana_username}}"
-      SERVICE_ELASTICSEARCH_PASSWORD: "{{elasticsearch_svckibana_password}}"
+      ELASTICSEARCH_PASSWORD: changeme
+      ELASTICSEARCH_PORT: '9200'
+      ELASTICSEARCH_USERNAME: elastic
+      JAVA_OPTS: -Xms512m -Xmx512m
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
-      KAFKA_POLLRECORD: 200
-      KAFKA_POLLINGTIME: 200
-      JAVA_OPTS: "-Xms{{importer_heap_size}} -Xmx{{importer_heap_size}}"
-    external_links:
-    - kafka/kafka:kafka
-    - elasticsearch/elasticsearch-client:elasticsearch
-    labels:
-      io.rancher.container.pull_image: always
-      com.prometheus.monitoring: 'true'
-      com.prometheus.port: '8080'
-      com.prometheus.metricspath: '/prometheus'
-    tty: true
-    image: skalogs/process-importer:{{importer_version}}
+      PROCESS_URL_REGISTRY: http://etl-backend:8090
+      ZOOKEEPER_BOOTSTRAP_SERVERS: zookeeper:2181/kafka
+      SPRING_MAIL_HOST: {{spring_mail_host}}
+      SPRING_MAIL_PORT: {{spring_mail_port}}
+      SPRING_MAIL_USERNAME: {{spring_mail_username}}
+      SPRING_MAIL_PASSWORD: {{spring_mail_password}}
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: {{spring_mail_properties_mail_smtp_auth}}
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: {{spring_mail_properties_mail_smtp_starttls_enable}}
     stdin_open: true
-    mem_limit: {{importer_mem_limit}}
-    mem_swappiness: 0
-
+    external_links:
+    - zookeeper/zookeeper:zookeeper
+    - elasticsearch/elasticsearch-client:elasticsearch
+    - kafka/kafka:kafka
+    - etl/etl-backend:etl-backend
+    tty: true
+    ports:
+    - 8080:8080/tcp
+    labels:
+      com.prometheus.monitoring: 'true'
+      io.rancher.container.hostname_override: container_name
+      com.prometheus.port: '8080'
+      io.rancher.container.pull_image: always
+      com.prometheus.metricspath: /prometheus
+  metric-importer:
+    mem_limit: 636870912
+    image: skalogs/metric-importer:{{etl_version}}
+    environment:
+      ELASTICSEARCH_CLUSTERNAME: skalogs-demo
+      ELASTICSEARCH_CUSTOM_INDEX_PREFIX: skalogs-demo
+      ELASTICSEARCH_HOST: elasticsearch
+      ELASTICSEARCH_PASSWORD: changeme
+      ELASTICSEARCH_PORT: '9200'
+      ELASTICSEARCH_USERNAME: elastic
+      JAVA_OPTS: -Xms512m -Xmx512m
+      KAFKA_BOOTSTRAPSERVERS: kafka:9092
+      PROCESS_URL_REGISTRY: http://etl-backend:8090
+      ZOOKEEPER_BOOTSTRAP_SERVERS: zookeeper:2181/kafka
+      SPRING_MAIL_HOST: {{spring_mail_host}}
+      SPRING_MAIL_PORT: {{spring_mail_port}}
+      SPRING_MAIL_USERNAME: {{spring_mail_username}}
+      SPRING_MAIL_PASSWORD: {{spring_mail_password}}
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: {{spring_mail_properties_mail_smtp_auth}}
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: {{spring_mail_properties_mail_smtp_starttls_enable}}
+    stdin_open: true
+    external_links:
+    - zookeeper/zookeeper:zookeeper
+    - elasticsearch/elasticsearch-client:elasticsearch
+    - kafka/kafka:kafka
+    - etl/etl-backend:etl-backend
+    tty: true
+    ports:
+    - 8081:8081/tcp
+    labels:
+      com.prometheus.monitoring: 'true'
+      io.rancher.container.hostname_override: container_name
+      com.prometheus.port: '8081'
+      io.rancher.container.pull_image: always
+      com.prometheus.metricspath: /prometheus
   error-importer:
+    mem_limit: 636870912
+    image: skalogs/error-importer:{{etl_version}}
     environment:
+      ELASTICSEARCH_CLUSTERNAME: skalogs-demo
+      ELASTICSEARCH_CUSTOM_INDEX_PREFIX: skalogs-demo
       ELASTICSEARCH_HOST: elasticsearch
-      ELASTICSEARCH_PORT: 9200
-      ELASTICSEARCH_CLUSTERNAME: "{{ elasticsearch_cluster_name }}"
-      SERVICE_ELASTICSEARCH_USERNAME: "{{elasticsearch_svckibana_username}}"
-      SERVICE_ELASTICSEARCH_PASSWORD: "{{elasticsearch_svckibana_password}}"
+      ELASTICSEARCH_PASSWORD: changeme
+      ELASTICSEARCH_PORT: '9200'
+      ELASTICSEARCH_USERNAME: elastic
+      JAVA_OPTS: -Xms512m -Xmx512m
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
-      JAVA_OPTS: "-Xms{{importer_heap_size}} -Xmx{{importer_heap_size}}"
-    external_links:
-    - kafka/kafka:kafka
-    - elasticsearch/elasticsearch-client:elasticsearch
-    labels:
-      io.rancher.container.pull_image: always
-      com.prometheus.monitoring: 'true'
-      com.prometheus.port: '8080'
-      com.prometheus.metricspath: '/prometheus'
-    tty: true
-    image: skalogs/error-importer:{{importer_version}}
+      ZOOKEEPER_BOOTSTRAP_SERVERS: zookeeper:2181/kafka
     stdin_open: true
-    mem_limit: {{importer_mem_limit}}
-    mem_swappiness: 0
-
+    external_links:
+    - zookeeper/zookeeper:zookeeper
+    - elasticsearch/elasticsearch-client:elasticsearch
+    - kafka/kafka:kafka
+    tty: true
+    ports:
+    - 8085:8085/tcp
+    labels:
+      com.prometheus.monitoring: 'true'
+      com.prometheus.port: '8085'
+      io.rancher.container.pull_image: always
+      com.prometheus.metricspath: /prometheus
   retry-importer:
+    mem_limit: 636870912
+    image: skalogs/retry-importer:{{etl_version}}
     environment:
+      ELASTICSEARCH_CLUSTERNAME: skalogs-demo
+      ELASTICSEARCH_CUSTOM_INDEX_PREFIX: skalogs-demo
       ELASTICSEARCH_HOST: elasticsearch
-      ELASTICSEARCH_PORT: 9200
-      ELASTICSEARCH_CLUSTERNAME: "{{ elasticsearch_cluster_name }}"
-      SERVICE_ELASTICSEARCH_USERNAME: "{{elasticsearch_svckibana_username}}"
-      SERVICE_ELASTICSEARCH_PASSWORD: "{{elasticsearch_svckibana_password}}"
+      ELASTICSEARCH_PASSWORD: changeme
+      ELASTICSEARCH_PORT: '9200'
+      ELASTICSEARCH_USERNAME: elastic
+      JAVA_OPTS: -Xms512m -Xmx512m
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
-      JAVA_OPTS: "-Xms{{importer_heap_size}} -Xmx{{importer_heap_size}}"
-    external_links:
-    - kafka/kafka:kafka
-    - elasticsearch/elasticsearch-client:elasticsearch
-    labels:
-      io.rancher.container.pull_image: always
-      com.prometheus.monitoring: 'true'
-      com.prometheus.port: '8080'
-      com.prometheus.metricspath: '/prometheus'
-    tty: true
-    image: skalogs/retry-importer:{{importer_version}}
+      ZOOKEEPER_BOOTSTRAP_SERVERS: zookeeper:2181/kafka
     stdin_open: true
-    mem_limit: {{importer_mem_limit}}
-    mem_swappiness: 0
+    external_links:
+    - zookeeper/zookeeper:zookeeper
+    - elasticsearch/elasticsearch-client:elasticsearch
+    - kafka/kafka:kafka
+    tty: true
+    ports:
+    - 8086:8086/tcp
+    labels:
+      com.prometheus.monitoring: 'true'
+      com.prometheus.port: '8086'
+      io.rancher.container.pull_image: always
+      com.prometheus.metricspath: /prometheus
