--- a/install_skalogs.yml
+++ b/install_skalogs.yml
@@ -26,4 +26,5 @@
   - {role: AdopteUnOps.rancher-install-stack, stack_name: etl, tags: [install-stack, etl]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: importer, tags: [install-stack, importer]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: kibana, tags: [install-stack, kibana]}
+  - {role: AdopteUnOps.rancher-install-stack, stack_name: documentation, tags: [install-stack, doc]}
   - {role: AdopteUnOps.rancher-install-stack, stack_name: endpoints, tags: [install-stack, endpoints]}
