skalogs-backend now needs a dependency on ES

--- a/templates/etl/docker-compose.yml
+++ b/templates/etl/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     - postgres/postgres:postgres
     - prometheus/prometheus:prometheus
     - zookeeper/zookeeper:zookeeper
+    - elasticsearch/elasticsearch-client:elasticsearch
     tty: true
     links:
     - process-importer-simulator:simulate
