--- a/templates/importer/docker-compose.yml
+++ b/templates/importer/docker-compose.yml
@@ -19,6 +19,9 @@ services:
       SPRING_MAIL_PASSWORD: {{spring_mail_password}}
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: {{spring_mail_properties_mail_smtp_auth}}
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: {{spring_mail_properties_mail_smtp_starttls_enable}}
+      BUFFER_ELASTICSEARCH_MAX_ELEMENTS: {{buffer_elasticsearch_max_elements}}
+      BUFFER_ELASTICSEARCH_MAX_SIZE_IN_BYTES: {{buffer_elasticsearch_max_size_in_bytes}}
+      BUFFER_ELASTICSEARCH_MAX_TIME: {{buffer_elasticsearch_max_time}}
     stdin_open: true
     external_links:
     - zookeeper/zookeeper:zookeeper
@@ -54,6 +57,9 @@ services:
       SPRING_MAIL_PASSWORD: {{spring_mail_password}}
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: {{spring_mail_properties_mail_smtp_auth}}
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: {{spring_mail_properties_mail_smtp_starttls_enable}}
+      BUFFER_ELASTICSEARCH_MAX_ELEMENTS: {{buffer_elasticsearch_max_elements}}
+      BUFFER_ELASTICSEARCH_MAX_SIZE_IN_BYTES: {{buffer_elasticsearch_max_size_in_bytes}}
+      BUFFER_ELASTICSEARCH_MAX_TIME: {{buffer_elasticsearch_max_time}}
     stdin_open: true
     external_links:
     - zookeeper/zookeeper:zookeeper
@@ -82,6 +88,9 @@ services:
       JAVA_OPTS: -Xms512m -Xmx512m
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
       ZOOKEEPER_BOOTSTRAP_SERVERS: zookeeper:2181/kafka
+      BUFFER_ELASTICSEARCH_MAX_ELEMENTS: {{buffer_elasticsearch_max_elements}}
+      BUFFER_ELASTICSEARCH_MAX_SIZE_IN_BYTES: {{buffer_elasticsearch_max_size_in_bytes}}
+      BUFFER_ELASTICSEARCH_MAX_TIME: {{buffer_elasticsearch_max_time}}
     stdin_open: true
     external_links:
     - zookeeper/zookeeper:zookeeper
@@ -108,6 +117,9 @@ services:
       JAVA_OPTS: -Xms512m -Xmx512m
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
       ZOOKEEPER_BOOTSTRAP_SERVERS: zookeeper:2181/kafka
+      BUFFER_ELASTICSEARCH_MAX_ELEMENTS: {{buffer_elasticsearch_max_elements}}
+      BUFFER_ELASTICSEARCH_MAX_SIZE_IN_BYTES: {{buffer_elasticsearch_max_size_in_bytes}}
+      BUFFER_ELASTICSEARCH_MAX_TIME: {{buffer_elasticsearch_max_time}}
     stdin_open: true
     external_links:
     - zookeeper/zookeeper:zookeeper
