--- a/templates/etl/docker-compose.yml
+++ b/templates/etl/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     - 8099:8099/tcp
     labels:
       io.rancher.container.hostname_override: container_name
+      com.prometheus.port: '8099'
       io.rancher.container.pull_image: always
   etl-backend:
     image: skalogs/skaetl-backend:{{etl_version}}
@@ -86,8 +87,11 @@ services:
     ports:
     - 8084:8084/tcp
     labels:
+      com.prometheus.monitoring: 'true'
       io.rancher.container.hostname_override: container_name
+      com.prometheus.port: '8084'
       io.rancher.container.pull_image: always
+      com.prometheus.metricspath: /actuator/prometheus
   referential-importer:
     mem_limit: 636870912
     image: skalogs/referential-importer:{{etl_version}}
@@ -118,4 +122,5 @@ services:
       io.rancher.container.hostname_override: container_name
       com.prometheus.port: '8082'
       io.rancher.container.pull_image: always
+      io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
       com.prometheus.metricspath: /actuator/prometheus
